@@ -43,10 +43,7 @@
 // ***************************************************************************
 // Static class variable: ptr to single instance of class
 // ***************************************************************************
-//G4ThreadLocal 
-G4WeightWindowStore* G4WeightWindowStore::fInstance = 0;
-
-
+G4ThreadLocal G4WeightWindowStore* G4WeightWindowStore::fInstance = 0;
 
 G4WeightWindowStore::
 G4WeightWindowStore() :
@@ -57,7 +54,7 @@ fWorldVolume(G4TransportationManager::GetTransportationManager()->GetNavigatorFo
 {}
 
 G4WeightWindowStore::
-G4WeightWindowStore(G4String ParallelWorldName) :
+G4WeightWindowStore(const G4String& ParallelWorldName) :
 fWorldVolume(G4TransportationManager::GetTransportationManager()->GetParallelWorld(ParallelWorldName)),
   fGeneralUpperEnergyBounds(),
   fCellToUpEnBoundLoWePairsMap(),
@@ -243,7 +240,7 @@ G4WeightWindowStore* G4WeightWindowStore::GetInstance()
 // Creates it in case it's called for the first time.
 // ***************************************************************************
 //
-G4WeightWindowStore* G4WeightWindowStore::GetInstance(G4String ParallelWorldName)
+G4WeightWindowStore* G4WeightWindowStore::GetInstance(const G4String& ParallelWorldName)
 {
   if (!fInstance)
   {
